# bd_cw

./: CLAUDE.md
.claude/: settings.local.json
backend/: .env.example  alembic.ini  main.py  pyproject.toml
backend/actions/: create_admin.py  populate_db.py
backend/alembic/: env.py
backend/alembic/versions/: 2026_04_06_1844-3559291aa6b6_init_schema.py  2026_04_07_1235-dd70e1bb94f2_rename_users_password_to_password_hash.py
backend/api/v1/: __init__.py
backend/api/v1/auth/: __init__.py
backend/api/v1/auth/controllers/: auth.py
backend/api/v1/auth/services/: auth_service.py
backend/core/: config.py  enums.py
backend/core/auth/: dependencies.py  jwt.py  roles.py
backend/core/helpers/: db_helper.py
backend/core/models/: __init__.py  address.py  admin.py  client.py  courier.py  enums.py  mixins.py  order.py  payment.py  review.py  transport.py  user.py
backend/core/schemas/: auth.py  user.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/dist-tsnode/: tsconfig.node.tsbuildinfo
frontend/src/: main.tsx  routes.tsx
frontend/src/components/layout/: AdminLayout.tsx  ClientLayout.tsx  CourierLayout.tsx
frontend/src/features/admin/pages/: AdminDashboard.tsx  Reports.tsx  Users.tsx
frontend/src/features/auth/: AuthContext.tsx  LoginPage.tsx  ProtectedRoute.tsx  RegisterPage.tsx  api.ts  types.ts
frontend/src/features/client/pages/: CreateDelivery.tsx  MyDeliveries.tsx  Profile.tsx  Track.tsx
frontend/src/features/courier/pages/: ActiveTask.tsx  CourierDashboard.tsx  (+4 more)
(+1 files in other folders)
